error_analisisCalificaion.txt
./Tarea_3/AnalisisCalificacion.java:8: warning: A refining statement is required for statement specifications
        //@requires nota >= 0 && nota <= 100;
           ^
./Tarea_3/AnalisisCalificacion.java:54: warning: A refining statement is required for statement specifications
        //@ensures \result == (\sum Calificacion calicacion; calificaciones; 1);
           ^
./Tarea_3/AnalisisCalificacion.java:66: warning: A refining statement is required for statement specifications
        //@ requires valor >= 0 && valor <= 100;
            ^
./Tarea_3/AnalisisCalificacion.java:80: warning: A refining statement is required for statement specifications
        //@ensures \result == (\forall Calificacion calificacion; calificaciones ; calificacion.getNota() < 70);
           ^
./Tarea_3/AnalisisCalificacion.java:5: error: cannot find symbol
    private final List<Calificacion> calificaciones = new ArrayList<>();
                       ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:13: error: cannot find symbol
        Calificacion calificacion = new Calificacion(nombre, nota);
        ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:13: error: cannot find symbol
        Calificacion calificacion = new Calificacion(nombre, nota);
                                        ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:23: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:33: error: cannot find symbol
        Calificacion mejor = calificaciones.get(0);
        ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:34: error: cannot find symbol
        for (Calificacion c : calificaciones) {
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:45: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:54: error: cannot find symbol
        //@ensures \result == (\sum Calificacion calicacion; calificaciones; 1);
                                    ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:54: error: incompatible types: java.util.List<Calificacion> cannot be converted to boolean
        //@ensures \result == (\sum Calificacion calicacion; calificaciones; 1);
                                                             ^
./Tarea_3/AnalisisCalificacion.java:57: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:71: error: cannot find symbol
        for (Calificacion c : calificaciones) {
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:81: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:80: error: cannot find symbol
        //@ensures \result == (\forall Calificacion calificacion; calificaciones ; calificacion.getNota() < 70);
                                       ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:80: error: incompatible types: java.util.List<Calificacion> cannot be converted to boolean
        //@ensures \result == (\forall Calificacion calificacion; calificaciones ; calificacion.getNota() < 70);
                                                                  ^
14 errors
4 warnings
